--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile files('libraries/YouTubeAndroidPlayerApi.jar')
     compile project(':pager-indicator-lib')
+    compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.android.support:support-v4:22.0.0'
 }
