--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            <meta-data android:name="com.example.user.seedapp.GlideConfiguration"
+                android:value="GlideModule"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
