--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile project(':pager-indicator-lib')
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-v4:22.0.0'
+    compile 'de.hdodenhof:circleimageview:1.2.2'
 }
