--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-v4:22.0.0'
     compile 'de.hdodenhof:circleimageview:1.2.2'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.+'
 }
