--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,10 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile files('libraries/YouTubeAndroidPlayerApi.jar')
     compile project(':pager-indicator-lib')
+    compile project(':ExoPlayers')
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-v4:22.0.0'
     compile 'de.hdodenhof:circleimageview:1.2.2'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.+'
+    compile 'com.facebook.android:facebook-android-sdk:4.0.0'
 }
