--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,11 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 22
     buildToolsVersion "21.1.2"
-
     defaultConfig {
         applicationId "com.seedmcot.seedcave"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 14
+        versionCode 16
         versionName "3.0"
     }
     buildTypes {
@@ -17,10 +16,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.google.code.gson:gson:2.2.4'
     compile files('libraries/YouTubeAndroidPlayerApi.jar')
